--- a/odin-recipes/recipes/styles.css
+++ b/odin-recipes/recipes/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #fff;
+    background: #fff3c3;
     font-family: serif;
     font-weight: 350;
     margin: 0; 
@@ -14,7 +14,6 @@ h1{
     text-align: center
 }
 .food-container{
-    border: 2px solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,13 +24,14 @@ h1{
 }
 
 .food-img{
-    border: 2px solid;
+    border: 4px solid;
+    border-color: #ff7e6f;
+    border-radius: 40%;
     text-align: center;
     margin-top: 1%;
-    margin-left: 30%;
-    margin-right: 30%;
-    padding: 5%;
-
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 6%;
 }
 
 .recipe-list{
@@ -44,3 +44,19 @@ h1{
     padding: 0;
 }
 
+.recipe-list p{
+    color: #dd9c4c;
+}
+
+.recipe-list ul li a{
+    color: #e1b879;
+    text-decoration: none;
+}
+
+.recipe-list ul li a:hover{
+    color:  #ff7e6f;
+}
+
+.website-title{
+    margin-top: -1%;
+}
