--- a/odin-recipes/recipes/styles.css
+++ b/odin-recipes/recipes/styles.css
@@ -23,15 +23,14 @@ h1{
     
 }
 
-.food-img{
+.food-img img{
     border: 4px solid;
     border-color: #ff7e6f;
-    border-radius: 40%;
+    border-radius: 25%;
     text-align: center;
-    margin-top: 1%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding: 6%;
+    width: 360px;
+    height: 200px;
+
 }
 
 .recipe-list{
@@ -57,6 +56,3 @@ h1{
     color:  #ff7e6f;
 }
 
-.website-title{
-    margin-top: -1%;
-}
