--- a/odin-recipes/recipes/styles.css
+++ b/odin-recipes/recipes/styles.css
@@ -18,9 +18,7 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    flex-grow: 1;
-    
-    
+    flex-grow: 1;  
 }
 
 .food-img img{
@@ -56,3 +54,51 @@ h1{
     color:  #ff7e6f;
 }
 
+.breakfast-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0;
+}
+
+.breakfast-box1 img{
+    border: 4px solid;
+    border-color: #ff7e6f;
+    border-radius: 25%;
+}
+
+.breakfast-box1 {
+    margin-left:10%;
+}
+
+.breakfast-box1 p{
+    justify-content: center;
+    text-align: center;
+    color: #e1b879;
+    margin-top: -0.5%;
+}
+
+.breakfast-box2{
+    padding: 30px;
+    margin-top: -5%;
+    margin-right: 10%;
+}
+
+.breakfast-box2 p{
+    text-align: center;
+    color: #eb776a;
+}
+
+.breakfast-box2 p a{
+    text-decoration: none;
+    color: #dd9c4c;
+}
+
+.breakfast-box2 p a:hover{
+    color: #ff7e6f;
+}
+
+.breakfast-box2 ul li{
+    list-style: none;
+    color: #eb776a;
+}
