--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ header nav ul li a {
     display: flex;
     justify-content:right;
     margin-top: 15px;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .github-link p{
@@ -132,6 +132,7 @@ header nav ul li a {
 
 .github-link p a{
     text-decoration: none;
+    color:#1E2F3B;
 }
 
 .github-link p a:hover{
