--- a/styles.css
+++ b/styles.css
@@ -119,22 +119,35 @@ header nav ul li a {
     padding: 5%;
 }
 
-.github-link{
+.github-link-card{
     display: flex;
-    justify-content:right;
-    margin-top: 15px;
-    margin-right: 20px;
+    flex-direction: row-reverse;
+    min-height: 80vh; 
+    position: relative;
+    margin-right: 2%;
 }
 
-.github-link p{
-    font-size: 15px;
-}
-
-.github-link p a{
+.github-link-card a{
     text-decoration: none;
     color:#1E2F3B;
 }
 
-.github-link p a:hover{
-    color:#5baf92;
+.link-card:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.link-card{
+    font-size: 15px;
+    width: 6em;
+    height: 2em; 
+    background-color: #f0f0f0;
+    border: 3px solid #2C3147;
+    color: #1E2F3B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5%;
+    background-color: #81AB9D;
+
 }
