--- a/odin-recipes/recipes/styles.css
+++ b/odin-recipes/recipes/styles.css
@@ -65,10 +65,13 @@ h1{
     border: 4px solid;
     border-color: #ff7e6f;
     border-radius: 25%;
+    width: 300px;
+    height: 250px;
 }
 
 .breakfast-box1 {
-    margin-left:10%;
+    margin-left:7%;
+   
 }
 
 .breakfast-box1 p{
@@ -80,7 +83,7 @@ h1{
 
 .breakfast-box2{
     padding: 30px;
-    margin-top: -5%;
+    margin-top: -3%;
     margin-right: 10%;
 }
 
